samples/_failures_safe/1761183855_47abb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0e6b793.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_c0e6b793.c:184:9: error: expected expression at end of input
  184 |         case
      |         ^~~~
./samples/SAFE/__tmp_c0e6b793.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0e6b793.c:184:9: error: expected declaration or statement at end of input
